@@ -1,30 +1,28 @@
 package com.linkedin.metadata.kafka.hydrator;
 
-import static com.linkedin.metadata.Constants.*;
-import static com.linkedin.metadata.kafka.config.EntityHydratorConfig.EXCLUDED_ASPECTS;
-
+import com.datahub.authentication.Authentication;
 import com.fasterxml.jackson.databind.node.JsonNodeFactory;
 import com.fasterxml.jackson.databind.node.ObjectNode;
 import com.linkedin.common.urn.Urn;
 import com.linkedin.entity.EntityResponse;
-import com.linkedin.entity.client.SystemRestliEntityClient;
-import com.linkedin.metadata.models.AspectSpec;
-import com.linkedin.metadata.models.registry.EntityRegistry;
+import com.linkedin.entity.client.EntityClient;
 import com.linkedin.r2.RemoteInvocationException;
 import java.net.URISyntaxException;
 import java.util.Collections;
 import java.util.Optional;
-import java.util.Set;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+
+import static com.linkedin.metadata.Constants.*;
+
 
 @Slf4j
 @RequiredArgsConstructor
 public class EntityHydrator {
 
-  private final EntityRegistry _entityRegistry;
-  private final SystemRestliEntityClient _entityClient;
+  private final Authentication _systemAuthentication;
+  private final EntityClient _entityClient;
+
   private final ChartHydrator _chartHydrator = new ChartHydrator();
   private final CorpUserHydrator _corpUserHydrator = new CorpUserHydrator();
   private final DashboardHydrator _dashboardHydrator = new DashboardHydrator();
@@ -45,17 +43,8 @@ public class EntityHydrator {
     // Hydrate fields from snapshot
     EntityResponse entityResponse;
     try {
-      Set<String> aspectNames =
-          Optional.ofNullable(_entityRegistry.getEntitySpecs().get(urnObj.getEntityType()))
-              .map(
-                  spec ->
-                      spec.getAspectSpecs().stream()
-                          .map(AspectSpec::getName)
-                          .filter(aspectName -> !EXCLUDED_ASPECTS.contains(aspectName))
-                          .collect(Collectors.toSet()))
-              .orElse(Set.of());
-      entityResponse =
-          _entityClient.batchGetV2(Collections.singleton(urnObj), aspectNames).get(urnObj);
+      entityResponse = _entityClient.batchGetV2(entityTypeName, Collections.singleton(urnObj), null,
+          this._systemAuthentication).get(urnObj);
     } catch (RemoteInvocationException | URISyntaxException e) {
       log.error("Error while calling GMS to hydrate entity for urn {}", urn);
       return Optional.empty();
@@ -86,10 +75,7 @@ public class EntityHydrator {
         _datasetHydrator.hydrateFromEntityResponse(document, entityResponse);
         break;
       default:
-        log.error(
-            "Unable to find valid hydrator for entity type: {} urn: {}",
-            entityResponse.getEntityName(),
-            urn);
+        log.error("Unable to find valid hydrator for entity type: {} urn: {}", entityResponse.getEntityName(), urn);
         return Optional.empty();
     }
     return Optional.of(document);
